force-app/main/default/objects/Address__c/fields/addressid_18__c.field-meta.xml
<CustomField>
        <fullName>addressid_18__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>addressid(18)</label>
        <type>Text</type>
    </CustomField>