force-app/main/default/objects/Address__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>RUBX-1672 : Description of the address record</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>