force-app/main/default/objects/Address__c/fields/State_Province__c.field-meta.xml
<CustomField>
    <fullName>State_Province__c</fullName>
    <description>RUBX-1672 : This field is used to capture State or Province name for the address</description>
    <label>State/Province</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>