force-app/main/default/objects/Address__c/fields/Street_Name__c.field-meta.xml
<CustomField>
    <fullName>Street_Name__c</fullName>
    <description>RUBX-1672 : This field is used to capture Street Name for the address</description>
    <label>Street Name</label>
    <type>TextArea</type>
</CustomField>