force-app/main/default/objects/Address__c/fields/Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Postal_Code__c</fullName>
    <description>RUBX-1672 : This field is used to capture Postal Code for the address</description>
    <label>Zip/Postal Code</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>