force-app/main/default/objects/Address__c/validationRules/Address_Naming_Convention.validationRule-meta.xml
<ValidationRule>
    <fullName>Address_Naming_Convention</fullName>
    <active>true</active>
    <description>RUBX-3907 :</description>
    <errorConditionFormula>AND (
NOT($Setup.Bypass_Validations__c.Disable__c),
 Name !=  City__c + &#39; - &#39; +  Zip_Postal_Code__c 
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Please name the address in the following format: City - Zipcode. Example: Seattle - 10010. Please note the hyphen and space before and after hyphen</errorMessage>
</ValidationRule>