force-app/main/default/objects/Address__c/validationRules/Either_Account_or_Contact_Association.validationRule-meta.xml
<ValidationRule>
    <fullName>Either_Account_or_Contact_Association</fullName>
    <active>true</active>
    <description>RUBX-1672 : Either Account or Contact should be associated with the address.</description>
    <errorConditionFormula>AND (
NOT($Setup.Bypass_Validations__c.Disable__c),
OR( ISCHANGED(Account__c),ISCHANGED(Contact__c),ISNEW()),
NOT(ISBLANK(Account__c)),
NOT(ISBLANK(Contact__c))
)</errorConditionFormula>
    <errorMessage>Either an account or a contact can be associated with an address.</errorMessage>
</ValidationRule>